<resources>
    <string name="app_name">Hiker\'s Watch</string>
    <string name="todo">TODO</string>
    <string name="hiker_s_watch">Hiker\'s Watch</string>
    <string name="latitude">Latitude:</string>
    <string name="accuracy_12_35">Accuracy:</string>
    <string name="Altitude">Altitude:</string>
    <string name="address_n_dumdum_road_n_dumdum">Address:</string>
    <string name="longitude_12_23">Longitude:</string>
</resources>